Don't delete entire previous line by backspace in pos 0

Bug introduced by bcba8991413622ecec690a2c4ee033f47ef680a5
Sorry, for the hassle, I hope it's OK now.

BUG: 408016

Differential Revision: https://phabricator.kde.org/D19785